minor change in css file Imported from Changeset 2434

--- a/WarehouseEcommerce/Areas/Shop/Content/Site.css
+++ b/WarehouseEcommerce/Areas/Shop/Content/Site.css
@@ -1890,7 +1890,8 @@ ul.mhp-menu {
 }
 
 .kit-product .pro-content {
-    width: 100%
+    width: 100%;
+    padding: unset;
 }
 
 @media(min-width:900px) {
