--- a/WMS/Views/Products/_ProductRecipeItems.cshtml
+++ b/WMS/Views/Products/_ProductRecipeItems.cshtml
@@ -1,4 +1,5 @@
 ﻿@using System.Web.UI.WebControls
+@using Ganedata.Core.Entities.Enums
 @{
     var grid = Html.DevExpress().GridView(settings =>
     {
@@ -48,7 +49,7 @@
                 var name = DataBinder.Eval(m.DataItem, "Name").ToString();
                 var kitId = (int)DataBinder.Eval(m.DataItem, "ProductKitId");
                 var function = string.Format("EditKitProduct({0},{1})", kitId, 3);
-                ViewContext.Writer.Write("<a onclick=" + function + "><i class='btn fa fa-pencil'></i></a> <a class='btn fa fa-trash' role='button' data-valueid='" + id + "' data-action='RemoveRecipeItemProduct' title='Delete Recipe Item' data-controller='Products' id='deleteBtn' data-title='Delete Recipe' data-message='This cannot be reversed, are you sure you want to remove this recipe item?' data-toggle='modal' data-target='#confirm-delete'></a>");
+                ViewContext.Writer.Write("<a onclick=" + function + "><i class='btn fa fa-pencil'></i></a> <a class='btn fa fa-trash' role='button' data-kitType=" + ((int)ProductKitTypeEnum.Recipe) + "  data-valueid='" + kitId + "' data-action='RemoveRecipeItemProduct' title='Delete Recipe Item' data-controller='Products' id='deleteBtn' data-title='Delete Recipe' data-message='This cannot be reversed, are you sure you want to remove this recipe item?' data-toggle='modal' data-target='#confirm-delete'></a>");
 
 
             });
