--- a/WarehouseEcommerce/Areas/Shop/Views/Products/KitProductDetail.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Products/KitProductDetail.cshtml
@@ -34,8 +34,8 @@
                         <ul class="thumbnails">
                             <li>
                                 <a class="thumbnail" href="@(!string.IsNullOrEmpty(Model.DefaultImage)?ViewBag.BaseFilePath + Model.DefaultImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" title="#">
-                                    @*<img data-zoom-image="@(!string.IsNullOrEmpty(Model.DefaultImage)?ViewBag.BaseFilePath + Model.DefaultImage:ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" src="@(!string.IsNullOrEmpty(Model.DefaultImage)?ViewBag.BaseFilePath + Model.DefaultImage:ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" id="zoom_03" class="img-responsive center-block" alt="image">*@
-                                    <img src="~/Areas/Shop/Content/app/img/product/Canon-EOS-1300D-DSLR-Camera-Body-with-Single-Lens-1.jpg" id="zoom_03" class="img-responsive center-block" alt="image">
+                                    <img data-zoom-image="@(!string.IsNullOrEmpty(Model.DefaultImage)?ViewBag.BaseFilePath + Model.DefaultImage:ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" src="@(!string.IsNullOrEmpty(Model.DefaultImage)?ViewBag.BaseFilePath + Model.DefaultImage:ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" id="zoom_03" class="img-responsive center-block" alt="image">
+                                    @*<img src="~/Areas/Shop/Content/app/img/product/Canon-EOS-1300D-DSLR-Camera-Body-with-Single-Lens-1.jpg" id="zoom_03" class="img-responsive center-block" alt="image">*@
                                 </a>
                             </li>
 
@@ -46,8 +46,8 @@
                                         {
                                             <div class="col-xs-12">
                                                 <a data-zoom-image="@(!string.IsNullOrEmpty(item.FilePath)?ViewBag.BaseFilePath + item.FilePath : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" data-image="@(!string.IsNullOrEmpty(item.FilePath) ? ViewBag.BaseFilePath + item.FilePath : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" href="@(!string.IsNullOrEmpty(item.FilePath)?ViewBag.BaseFilePath + item.FilePath:ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")">
-                                                    @*<img src="@(!string.IsNullOrEmpty(item.FilePath)?ViewBag.BaseFilePath + item.FilePath : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" class="img-responsive center-block" alt="additional image">*@
-                                                    <img src="~/Areas/Shop/Content/app/img/product/Canon-EOS-1300D-DSLR-Camera-Body-with-Single-Lens-1.jpg" id="zoom_03" class="img-responsive center-block" alt="image">
+                                                    <img src="@(!string.IsNullOrEmpty(item.FilePath)?ViewBag.BaseFilePath + item.FilePath : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" class="img-responsive center-block" alt="additional image">
+                                                    @*<img src="~/Areas/Shop/Content/app/img/product/Canon-EOS-1300D-DSLR-Camera-Body-with-Single-Lens-1.jpg" id="zoom_03" class="img-responsive center-block" alt="image">*@
                                                 </a>
                                             </div>
                                         }
@@ -119,6 +119,7 @@
                         <div class="tab-group rates-page-tabs">
                             <!-- Nav tabs -->
                             <ul class="nav nav-tabs responsive" role="tablist">
+
                                 <li role="presentation" class="active"><a href="#loan-rates" aria-controls="loan-rates" role="tab" data-toggle="tab">Options</a></li>
                                 <li role="presentation"><a href="#mortgage-rates" aria-controls="mortgage-rates" role="tab" data-toggle="tab">Extended Warranty</a></li>
                                 <li role="presentation"><a href="#checking-savings-rates" aria-controls="checking-savings-rates" role="tab" data-toggle="tab">Accessories</a></li>
