breadcrumb, filters changes and issues are resolved need to test on live Imported from Changeset 2440

--- a/WarehouseEcommerce/Areas/Shop/Views/Products/_DynamicFilters.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Products/_DynamicFilters.cshtml
@@ -70,9 +70,10 @@
 
                                 @foreach (var item in Model.Manufacturer)
                                 {
-                                    string name = item.Replace(" ", "_").Replace(",", "^");;
+                                    string name = item.Replace(" ", "_").Replace(",", "^");
                                     <li class="list-group-item"><input type="checkbox" id="BrandS" class="checkbox-inline" title="@(item)" value="@(name)" @(Request.Url.Query.ToLower().Contains(name.ToLower()) ? "checked" : "")>@(item)</li>
                                 }
+
 
 
                             </ul>
