--- a/WarehouseEcommerce/Areas/Shop/Views/Products/KitProductDetail.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Products/KitProductDetail.cshtml
@@ -21,7 +21,7 @@
                 }
                 @if (!string.IsNullOrEmpty(Model?.ProductCategory?.ProductCategoryName))
                 {
-                    <li><a href="@Url.Action("list", "Products", new { category = Model.ProductCategory?.ProductCategoryName, group = Model.ProductGroup?.ProductGroup, department = Model.TenantDepartment?.DepartmentName })">@(!string.IsNullOrEmpty(Model?.ProductCategory?.ProductCategoryName) ? Model.ProductCategory.ProductCategoryName : "")</a></li>
+                    <li><a href="@Url.Action("list", "Products", new { group = Model.ProductGroup?.ProductGroup, department = Model.TenantDepartment?.DepartmentName,values ="TypeS-"+Model.ProductCategory.ProductCategoryName })">@(!string.IsNullOrEmpty(Model?.ProductCategory?.ProductCategoryName) ? Model.ProductCategory.ProductCategoryName : "")</a></li>
                 }
 
                 <li>@Model.Name</li>
