--- a/WarehouseEcommerce/Areas/Shop/Views/Products/list.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Products/list.cshtml
@@ -5,11 +5,17 @@
 @{
     var UrlQuery = Request.Url.Query;
     string values = "";
+    string SubCategory = "";
+    string Manufacturer = "";
     if (UrlQuery.Contains("values="))
     {
         var startindex = UrlQuery.IndexOf("values=");
         var lastindex = UrlQuery.Length - startindex;
         values = UrlQuery.Substring(startindex, lastindex).Replace("values=", "");
+        var breadcumbstring = values.Split('/');
+        SubCategory = breadcumbstring.FirstOrDefault(u => u.Contains("TypeS-"));
+        Manufacturer = breadcumbstring.FirstOrDefault(u => u.Contains("BrandS-"));
+
     }
 
 }
@@ -18,16 +24,16 @@
 <div id="product-search" class="container custom-max-width">
     <div class="row">
         @Html.Hidden("valuesParameter", (string)values)
-        @Html.Action("_DynamicFilters", new { department = ViewBag.departmentId, groups = ViewBag.groupId, SubCategory = ViewBag.subcategory })
+        @Html.Action("_DynamicFilters", new { department = ViewBag.departmentId, groups = ViewBag.groupId, SubCategory = ViewBag.subcategory, productName = ViewBag.CurrentFilter })
         <div id="content" class="col-md-9 col-sm-12">
             <ul class="breadcrumb">
                 <li><a href="/shop">Home</a></li>
-                @if ((!string.IsNullOrWhiteSpace(ViewBag.departmentId) && ViewBag.department != "null") && (!string.IsNullOrWhiteSpace(ViewBag.groupId)) && (!string.IsNullOrWhiteSpace(ViewBag.subcategory) && ViewBag.subcategory != "null"))
+                @if ((!string.IsNullOrWhiteSpace(ViewBag.departmentId) && ViewBag.department != "null") && (!string.IsNullOrWhiteSpace(ViewBag.groupId)) && (!string.IsNullOrWhiteSpace(values) && values != "null"))
                 {
                     <li><a href="@Url.Action("list","Products",new { department=ViewBag.departmentId})">@ViewBag.departmentId </a></li>
                     <li><a href="@Url.Action("list","Products",new { group=ViewBag.groupId, department=ViewBag.departmentId})">@ViewBag.groupId </a></li>
-                    <li>@ViewBag.subcategory</li>
-                    ViewBag.Title = (ViewBag.departmentId ?? "") + " | " + (ViewBag.groupId ?? "") + " | " + (ViewBag.subcategory ?? "") + " | " + ViewBag.SiteDescription;
+                    <li>@SubCategory.Replace("TypeS-", "")</li>
+                    ViewBag.Title = (ViewBag.departmentId ?? "") + " | " + (ViewBag.groupId ?? "") + " | " + (SubCategory.Replace("TypeS-", "") ?? "") + " | " + ViewBag.SiteDescription;
                 }
                 else if (!string.IsNullOrWhiteSpace(ViewBag.departmentId) && !string.IsNullOrWhiteSpace(ViewBag.groupId))
                 {
@@ -40,15 +46,15 @@
                     <li>@ViewBag.departmentId</li>
                     ViewBag.Title = (ViewBag.departmentId ?? "") + " | " + ViewBag.SiteDescription;
                 }
-                else if (!string.IsNullOrWhiteSpace(ViewBag.manufacturername))
+                else if (!string.IsNullOrWhiteSpace(Manufacturer))
                 {
-                    <li>@ViewBag.manufacturername</li>
-                    ViewBag.Title = (ViewBag.manufacturername ?? "") + " | " + ViewBag.SiteDescription;
+                    <li>@(Manufacturer.Replace("BrandS-", "") ?? "")</li>
+                    ViewBag.Title = (Manufacturer.Replace("BrandS-", "") ?? "") + " | " + ViewBag.SiteDescription;
                 }
 
-                </ul>
+            </ul>
 
-                <div class="row cate-border">
+            <div class="row cate-border">
                 <div class="col-md-2 col-sm-3 col-xs-5">
                     <div class="btn-group-sm">
                         <button type="button" id="list-view" class="btn listgridbtn" data-toggle="tooltip" title="List">
@@ -84,117 +90,117 @@
                 </div>
 
 
-        </div>
-        <div class="row productspm product-cat">
-            @if (Model != null)
-            {
-                foreach (var item in Model)
+            </div>
+            <div class="row productspm product-cat">
+                @if (Model != null)
                 {
-                    <div class="product-layout product-list col-xs-12">
-                    <div class="product-thumb transition single-product-cat">
-                        <div class="image">
-                            <a href="@Url.Action("ProductDetails","Products", new {sku=item.SKUCode})"><img src="@(!string.IsNullOrEmpty(item.DefaultImage) ? ViewBag.BaseFilePath + item.DefaultImage : ViewBag.BaseFilePath + " /UploadedFiles/Products/no_image.gif")" title="@item.Name" alt="@item.Name" class="img-responsive center-block" /></a>
-                            <a href="@Url.Action("ProductDetails", "Products" , new { sku=item.SKUCode })"><img src="@(!string.IsNullOrEmpty(item.HoverImage) ? ViewBag.BaseFilePath +item.HoverImage : ViewBag.BaseFilePath + " /UploadedFiles/Products/no_image.gif")" class="img-responsive second-img" title="@item.Name" alt="@item.Name" /></a>
-                            <span class="salep">sale</span>
-                            <div class="topbutton">
-                                <button type="button" data-toggle="tooltip" title="Add to Wish List">
-                                    <svg width="20px" height="20px">
-                                        <use xlink:href="/Areas/Shop/Content/app/img/icons/icons.svg#wishlist"></use>
-                                    </svg>
-                                    <span class="hidden-xs"></span>
-                                </button>
-                                <button type="button" data-toggle="tooltip" title="Compare this Product" class="wishcom">
-                                    <svg width="20px" height="20px">
-                                        <use xlink:href="/Areas/Shop/Content/app/img/icons/icons.svg#pcom"></use>
-                                    </svg>
-                                    <span class="hidden-xs"></span>
-                                </button>
-                                <div class="bquickv" title="quickview" data-toggle="tooltip"></div>
+                    foreach (var item in Model)
+                    {
+                        <div class="product-layout product-list col-xs-12">
+                            <div class="product-thumb transition single-product-cat">
+                                <div class="image">
+                                    <a href="@Url.Action("ProductDetails","Products", new {sku=item.SKUCode})"><img src="@(!string.IsNullOrEmpty(item.DefaultImage) ? ViewBag.BaseFilePath + item.DefaultImage : ViewBag.BaseFilePath + " /UploadedFiles/Products/no_image.gif")" title="@item.Name" alt="@item.Name" class="img-responsive center-block" /></a>
+                                    <a href="@Url.Action("ProductDetails", "Products" , new { sku=item.SKUCode })"><img src="@(!string.IsNullOrEmpty(item.HoverImage) ? ViewBag.BaseFilePath +item.HoverImage : ViewBag.BaseFilePath + " /UploadedFiles/Products/no_image.gif")" class="img-responsive second-img" title="@item.Name" alt="@item.Name" /></a>
+                                    <span class="salep">sale</span>
+                                    <div class="topbutton">
+                                        <button type="button" data-toggle="tooltip" title="Add to Wish List">
+                                            <svg width="20px" height="20px">
+                                                <use xlink:href="/Areas/Shop/Content/app/img/icons/icons.svg#wishlist"></use>
+                                            </svg>
+                                            <span class="hidden-xs"></span>
+                                        </button>
+                                        <button type="button" data-toggle="tooltip" title="Compare this Product" class="wishcom">
+                                            <svg width="20px" height="20px">
+                                                <use xlink:href="/Areas/Shop/Content/app/img/icons/icons.svg#pcom"></use>
+                                            </svg>
+                                            <span class="hidden-xs"></span>
+                                        </button>
+                                        <div class="bquickv" title="quickview" data-toggle="tooltip"></div>
+                                    </div>
+                                </div>
+                                <div class="caption">
+                                    <h4><a href="@Url.Action("ProductDetails","Products", new {sku=item.SKUCode})">@item.Name</a></h4>
+                                    <div class="rating pull-left">
+                                        <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
+                                        <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
+                                        <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
+                                        <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
+                                        <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
+                                    </div>
+                                    <p class="pricedis price text-right">@*<span class="price-new">@ViewBag.CurrencySymbol@item.MinThresholdPrice</span>*@ <span class="price-old">@ViewBag.CurrencySymbol @item.SellPrice</span></p>
+                                    <div class="clearfix"></div>
+                                    <div class="button-group">
+                                        @if (@item.SellPrice > 0 && @item.SellPrice.HasValue && @item.PercentMargin > 0)
+                                        {
+                                            <a href="javascript:;" type="button" class="acart" onclick="AddToCart(@item.ProductId)">
+                                                <span>Add to Basket</span>
+                                            </a>
+                                        }
+                                        else
+                                        {
+                                            <a href="javascript:;" type="button" class="acart disabled-btn" disabled>
+                                                <span>Add to Basket</span>
+                                            </a>
+                                        }
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        <div class="caption">
-                            <h4><a href="@Url.Action("ProductDetails","Products", new {sku=item.SKUCode})">@item.Name</a></h4>
-                            <div class="rating pull-left">
-                                <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
-                                <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
-                                <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
-                                <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
-                                <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
-                            </div>
-                            <p class="pricedis price text-right">@*<span class="price-new">@ViewBag.CurrencySymbol@item.MinThresholdPrice</span>*@ <span class="price-old">@ViewBag.CurrencySymbol @item.SellPrice</span></p>
-                            <div class="clearfix"></div>
-                            <div class="button-group">
-                                @if (@item.SellPrice > 0 && @item.SellPrice.HasValue && @item.PercentMargin > 0)
-                                {
-                                    <a href="javascript:;" type="button" class="acart" onclick="AddToCart(@item.ProductId)">
-                                        <span>Add to Basket</span>
-                                    </a>
-                                }
-                                else
-                                {
-                                    <a href="javascript:;" type="button" class="acart disabled-btn" disabled>
-                                        <span>Add to Basket</span>
-                                    </a>
-                                }
-                            </div>
-                        </div>
-                    </div>
+                    }
+                }
+
+                <input type="hidden" id="departmentId" value="@ViewBag.departmentId" />
+                <input type="hidden" id="ProductGroupsId" value="@ViewBag.groupId" />
+                <input type="hidden" id="SubCategoryId" value="@ViewBag.subcategory" />
+            </div>
+            <div class="row pagi">
+                <div class="col-sm-6 col-xs-6 text-left pagination">
+
+                    @Html.PagedListPager(Model, page => Url.Action("list", new { group = ViewBag.groupId ?? null, sort = ViewBag.CurrentSort, filter = ViewBag.CurrentFilter, page = page, pagesize = Model.PageSize, department = ViewBag.departmentId, category = ViewBag.subcategory, values = values }))
+
+
                 </div>
-            }
-        }
+                <div class="col-sm-6 col-xs-6 text-right tot">
+                    Showing @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) to @Model.PageSize of @(Model.TotalItemCount)
 
-            <input type="hidden" id="departmentId" value="@ViewBag.departmentId" />
-            <input type="hidden" id="ProductGroupsId" value="@ViewBag.groupId" />
-            <input type="hidden" id="SubCategoryId" value="@ViewBag.subcategory" />
-        </div>
-        <div class="row pagi">
-            <div class="col-sm-6 col-xs-6 text-left pagination">
-
-                @Html.PagedListPager(Model, page => Url.Action("list", new { group = ViewBag.groupId ?? null, sort = ViewBag.CurrentSort, filter = ViewBag.CurrentFilter, page = page, pagesize = Model.PageSize, department = ViewBag.departmentId, values = values, category = ViewBag.subcategory }))
-
-
+                </div>
             </div>
-            <div class="col-sm-6 col-xs-6 text-right tot">
-                Showing @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) to @Model.PageSize of @(Model.PageCount)(@(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber))
 
-            </div>
         </div>
 
     </div>
-
-    </div>
-    </div>
+</div>
 
 
 
-    <script>
-        function GetSortedList(e) {
-            var sortvalue = parseInt(e.currentTarget.value);
+<script>
+    function GetSortedList(e) {
+        var sortvalue = parseInt(e.currentTarget.value);
 
-            var groupId = $("#ProductGroups").val();
-            if (groupId === "" || groupId === undefined || groupId === null) { groupId = $("#ProductGroupsId").val(); }
-            var pagenumber = $("#pagenumber").val();
-            var departmentId = $("#departmentId").val();
-            var currentFilter = $("#currentFiltervalue").val();
-            var searchstring = $("#searchString").val();
-            var pageSize = $("#input-limit :selected").val();
-            var valuesparam = $("#valuesParameter").val();
-            var subCategory = $("#SubCategoryId").val();
-            window.location.href = basePath + "/shop/Products/ProductCategories?productGroup=" + groupId + "&sortOrder=" + sortvalue + "&currentFilter=" + currentFilter + "&searchString=" + searchstring + "&page=" + pagenumber + "&pagesize=" + pageSize + "&department=" + departmentId + "&values=" + valuesparam + "&SubCategory=" + subCategory;
-        }
+        var groupId = $("#ProductGroups").val();
+        if (groupId === "" || groupId === undefined || groupId === null) { groupId = $("#ProductGroupsId").val(); }
+        var pagenumber = $("#pagenumber").val();
+        var departmentId = $("#departmentId").val();
+        var currentFilter = $("#currentFiltervalue").val();
+        var searchstring = $("#searchString").val();
+        var pageSize = $("#input-limit :selected").val();
+        var valuesparam = $("#valuesParameter").val();
+        var subCategory = $("#SubCategoryId").val();
+        window.location.href = basePath + "/shop/Products/ProductCategories?productGroup=" + groupId + "&sortOrder=" + sortvalue + "&currentFilter=" + currentFilter + "&searchString=" + searchstring + "&page=" + pagenumber + "&pagesize=" + pageSize + "&department=" + departmentId + "&SubCategory=" + subCategory + "&values=" + valuesparam;
+    }
 
-        function PageSizeChanges(e) {
-            var pageSize = parseInt(e.currentTarget.value);
-            var sortvalue = $("#SortedValues").val();
-            var groupId = $("#ProductGroups").val();
-            if (groupId === "" || groupId === undefined || groupId === null) { groupId = $("#ProductGroupsId").val(); }
-            var pagenumber = $("#pagenumber").val();
-            var departmentId = $("#departmentId").val();
-            var currentFilter = $("#currentFiltervalue").val();
-            var searchstring = $("#searchString").val();
-            var subCategory = $("#SubCategoryId").val();
-            var valuesparam = $("#valuesParameter").val();
-            window.location.href = basePath + "/shop/Products/ProductCategories?productGroup=" + groupId + "&sortOrder=" + sortvalue + "&currentFilter=" + currentFilter + "&searchString=" + searchstring + "&page=" + pagenumber + "&pagesize=" + pageSize + "&department=" + departmentId + "&values=" + valuesparam + "&SubCategory=" + subCategory;
-        }
+    function PageSizeChanges(e) {
+        var pageSize = parseInt(e.currentTarget.value);
+        var sortvalue = $("#SortedValues").val();
+        var groupId = $("#ProductGroups").val();
+        if (groupId === "" || groupId === undefined || groupId === null) { groupId = $("#ProductGroupsId").val(); }
+        var pagenumber = $("#pagenumber").val();
+        var departmentId = $("#departmentId").val();
+        var currentFilter = $("#currentFiltervalue").val();
+        var searchstring = $("#searchString").val();
+        var subCategory = $("#SubCategoryId").val();
+        var valuesparam = $("#valuesParameter").val();
+        window.location.href = basePath + "/shop/Products/ProductCategories?productGroup=" + groupId + "&sortOrder=" + sortvalue + "&currentFilter=" + currentFilter + "&searchString=" + searchstring + "&page=" + pagenumber + "&pagesize=" + pageSize + "&department=" + departmentId + "&SubCategory=" + subCategory + "&values=" + valuesparam;
+    }
 
-    </script>
+</script>
